doc/src/content/docs/en/0.3.x/api/compute/holo/gs.mdx
---
title: gs
description: Multi-focus optimization by the Gerchberg-Saxton method
sidebar:
  order: 12
srcPath: crates/autd3-rs-pattern-holo/src/linear_synthesis/gs.rs
slug: en/0.3.x/api/compute/holo/gs
---

import CodeTabs from "@components/CodeTabs.astro";

gs (Gerchberg-Saxton method) is an algorithm that iterates forward-propagation and back-propagation while alternately imposing amplitude constraints on the transducer side and the focal-point side.
It suppresses interference between focal points better than naive, but the amount of computation increases with the number of iterations.
The algorithm is based on the paper by Marzo et al. ([Marzo & Drinkwater, 2019](https://doi.org/10.1073/pnas.1813047115)).

## API

<CodeTabs rust={"gs(&geometry, &foci, wavelength, &option, &mut dst)?;"} python={"gs(geometry, foci, wavelength, option, dst)"} csharp={"Holo.Gs(geometry, foci, wavelength, option, dst);"} />

| Parameter    | Type                   | Description               |
| ------------ | ---------------------- | ------------------------- |
| `geometry`   | `&Geometry`            | Device layout             |
| `foci`       | `&[ControlPoint]`      | Sequence of focal points (position and target amplitude) |
| `wavelength` | `Length`               | Wavelength                |
| `option`     | `&GsOption`            | Additional options (see below) |
| `dst`        | `&mut [[Emission; _]]` | Output buffer             |

The parameters other than `option` are the same as [Naive](/autd3-sdk/en/0.3.x/api/compute/holo/naive/).

## GsOption

<CodeTabs rust={"GsOption {\n    repeat,\n    constraint,\n    directivity,\n    backend,\n    mask,\n}"} python={"GsOption(\n    repeat,\n    constraint,\n    directivity,\n    backend,\n    mask,\n)"} csharp={"new GsOption(\n    repeat,\n    constraint,\n    directivity,\n    backend,\n    mask\n)"} />

| Field         | Type                 | Default                   |
|---------------|----------------------|---------------------------|
| `repeat`      | `NonZeroUsize`       | `100`                     |
| `constraint`  | `EmissionConstraint` | `Clamp(MIN, MAX)`         |
| `directivity` | `Directivity`        | `Sphere`                  |
| `backend`     | `impl LinAlgBackend` | `NalgebraBackend`         |
| `mask`        | `TransducerMask`     | `AllEnabled`              |

`repeat` is the number of iterations.
The larger it is, the higher the quality, but the more computation time increases.
For the meaning of `constraint` / `directivity` / `backend` / `mask`, see the [Holo overview](/autd3-sdk/en/0.3.x/api/compute/holo/).

## Example

<CodeTabs rust={"use std::num::NonZeroUsize;\n\nuse autd3_rs::geometry::{Autd3, Geometry, offset};\nuse autd3_rs::units::{m, mm, s};\nuse autd3_rs::value::Intensity;\nuse autd3_rs_pattern::wavelength;\nuse autd3_rs_pattern_holo::{\n    ControlPoint, Directivity, EmissionConstraint, GsOption, NalgebraBackend, Pa, TransducerMask,\n    gs,\n};\n\nlet geometry = Geometry::new(vec![Autd3::default()]);\n\nlet mut dst = geometry.pattern_buffer();\n\ngs(\n    &geometry,\n    &[\n        ControlPoint {\n            point: geometry.center() + offset(-30.0 * mm, 0.0 * mm, 150.0 * mm),\n            amplitude: 2.5e3 * Pa,\n        },\n        ControlPoint {\n            point: geometry.center() + offset(30.0 * mm, 0.0 * mm, 150.0 * mm),\n            amplitude: 2.5e3 * Pa,\n        },\n    ],\n    wavelength(340.0 * m / s),\n    &GsOption {\n        repeat: NonZeroUsize::new(100).unwrap(),\n        constraint: EmissionConstraint::Clamp(Intensity::MIN, Intensity::MAX),\n        directivity: Directivity::Sphere,\n        backend: NalgebraBackend,\n        mask: TransducerMask::AllEnabled,\n    },\n    &mut dst,\n)?;"} python={"import numpy as np\nfrom autd3.geometry import Autd3, Geometry\nfrom autd3.units import m, s\nfrom autd3_pattern import wavelength\nfrom autd3_pattern_holo import (\n    ControlPoint,\n    Directivity,\n    EmissionConstraint,\n    GsOption,\n    NalgebraBackend,\n    Pa,\n    TransducerMask,\n    gs,\n)\n\ngeometry = Geometry([Autd3([0.0, 0.0, 0.0], [1.0, 0.0, 0.0, 0.0])])\n\ndst = geometry.pattern_buffer()\n\ngs(\n    geometry,\n    [\n        ControlPoint(\n            point=geometry.center() + np.array([-30.0, 0.0, 150.0]),\n            amplitude=2.5e3 * Pa,\n        ),\n        ControlPoint(\n            point=geometry.center() + np.array([30.0, 0.0, 150.0]),\n            amplitude=2.5e3 * Pa,\n        ),\n    ],\n    wavelength(340 * m / s),\n    GsOption(\n        repeat=100,\n        constraint=EmissionConstraint.Clamp(0x00, 0xFF),\n        directivity=Directivity.Sphere,\n        backend=NalgebraBackend(),\n        mask=TransducerMask.AllEnabled,\n    ),\n    dst,\n)"} csharp={"using System.Numerics;\nusing AUTD3;\nusing AUTD3.Holo;\nusing ControlPoint = AUTD3.Holo.ControlPoint;\nusing static AUTD3.Units;\nusing static AUTD3.Holo.HoloUnits;\n\nvar geometry = new Geometry(new[] { new Autd3(Vector3.Zero) });\n\nvar dst = geometry.PatternBuffer();\n\nHolo.Gs(\n    geometry,\n    new[]\n    {\n        new ControlPoint(geometry.Center + new Vector3(-30.0f, 0.0f, 150.0f), 2.5e3f * Pa),\n        new ControlPoint(geometry.Center + new Vector3(30.0f, 0.0f, 150.0f), 2.5e3f * Pa),\n    },\n    Pattern.Wavelength(340.0f * m / s),\n    new GsOption(\n        repeat: 100,\n        constraint: EmissionConstraint.Clamp(Intensity.Min, Intensity.Max),\n        directivity: Directivity.Sphere,\n        backend: new NalgebraBackend(),\n        mask: TransducerMask.AllEnabled\n    ),\n    dst\n);"} />
